[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/evm",
	"primitives/rpc",
	"template/node",
	"template/runtime",
	"template/test-utils/client",
]

[patch.crates-io]
# evm = { git = "https://github.com/hicommonwealth/evm.git", commit = "936526cc09e4b640c0217b8acf5a1f4d37b18a8e" }
# evm-core = { git = "https://github.com/hicommonwealth/evm.git", commit = "936526cc09e4b640c0217b8acf5a1f4d37b18a8e" }
# evm-runtime = { git = "https://github.com/hicommonwealth/evm.git", commit = "936526cc09e4b640c0217b8acf5a1f4d37b18a8e" }
# evm-gasometer = { git = "https://github.com/hicommonwealth/evm.git", commit = "936526cc09e4b640c0217b8acf5a1f4d37b18a8e" }