[package]
name = "fc-consensus"
version = "1.0.1-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-runtime = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-client-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-inherents = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
fp-consensus = { version = "1.0.0", path = "../../primitives/consensus" }
fp-rpc = { version = "1.0.1-dev", path = "../../primitives/rpc" }
fc-db = { version = "1.0.0", path = "../db" }
sp-consensus = { version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
derive_more = "0.99.2"
prometheus-endpoint = { version = "0.9.0", package = "substrate-prometheus-endpoint", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up"}
async-trait = "0.1.42"
