[package]
name = "frontier-template-test-client"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-light = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
substrate-test-client = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
frontier-template-runtime = { path = "../../runtime" }
