[package]
name = "frontier-template-test-client"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-light = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
substrate-test-client = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-benchmarking" }
frontier-template-runtime = { path = "../../runtime" }
